{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Land",
            "id": "00116dd4-f048-4ed3-a964-6bc7513d7ec0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "93621fc6-2229-4e4f-a06b-70b00f605834",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "fecf4fac-975b-44c0-9df9-8e8d5d5f03cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "PassThrough",
                    "id": "51c4764c-bd6d-4560-a0ff-057ada28d24e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fighting",
                    "type": "Button",
                    "id": "4252c7e4-8e71-4e2e-9d6f-aaa68666f3bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "e9add0ad-bb82-4216-bc4a-e1948a1958b3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "51ac49a2-8dc9-4cf8-ac3e-c93401f84946",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "22ebd4bb-ef1f-46d7-b4d1-87f895f6a01b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "66844340-bf07-45dd-baf0-ea8e4aca15e9",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09d0d599-4e71-45d1-8e2b-779d017bf521",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Att/Def",
                    "id": "39a3edfd-cc50-4f58-b62a-03aab7204188",
                    "path": "1DAxis(whichSideWins=2)",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Fighting",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2d7c0180-8c66-4d8d-9057-6b5a65352b38",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fighting",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b91b6556-aeb4-4be6-a2dd-2cfe3d7dc58e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fighting",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}